first latters of interface in small

--- a/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.html
+++ b/frontend/user-gateway-UI/src/app/_menus/login-signup/signup/action/stepperform/step-one/step-one.component.html
@@ -7,7 +7,7 @@
       <form [formGroup]="stepOneForm" (ngSubmit)="stepOneSubmit()" autocomplete="off" novalidate #formRef="ngForm" class="Personal-Details">
         <div class="ro-pd-profile-card-image-ui">
           <div class="ro-pd-profile-image-container">
-            <img [src]="ProfileImage" alt="Single File Preview" class="ro-pd-profile-image-preview" />
+            <img [src]="profileImage" alt="Single File Preview" class="ro-pd-profile-image-preview" />
             <div class="profile-overlay"></div>
           </div>
           <small class="ro-pd-upload-instruction">JPEG, PNG. Max size: 2MB</small>
@@ -25,24 +25,24 @@
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="ro-pd-titleName" class="form-label ps-1">Title<span class="asterisk">*</span></label>
-            <select class="form-select" id="ro-pd-titleName" formControlName="Title" aria-label="Default select example">
+            <select class="form-select" id="ro-pd-titleName" formControlName="title" aria-label="Default select example">
               <option value="">Select Title</option>
               <option value="Mr">Mr</option>
               <option value="Mrs">Mrs</option>
             </select>
-            <span class="error" *ngIf="stepOneForm.controls['Title'].hasError('required') && formRef.submitted">Please select a title</span>
+            <span class="error" *ngIf="stepOneForm.controls['title'].hasError('required') && formRef.submitted">Please select a title</span>
           </div>
           <div class="col-md-6 mb-1">
             <label for="ro-pd-fname" class="form-label ps-1">First Name<span class="asterisk">*</span></label>
-            <input type="text" class="form-control" id="ro-pd-fname" formControlName="FirstName" placeholder="Enter First Name" />
-            <span class="error" *ngIf="stepOneForm.controls['FirstName'].hasError('required') && formRef.submitted">Please enter first name</span>
-            <span class="error" *ngIf="stepOneForm.controls['FirstName'].hasError('minlength') && formRef.submitted">
+            <input type="text" class="form-control" id="ro-pd-fname" formControlName="firstName" placeholder="Enter First Name" />
+            <span class="error" *ngIf="stepOneForm.controls['firstName'].hasError('required') && formRef.submitted">Please enter first name</span>
+            <span class="error" *ngIf="stepOneForm.controls['firstName'].hasError('minlength') && formRef.submitted">
               First name must be at least 2 characters
             </span>
-            <span class="error" *ngIf="stepOneForm.controls['FirstName'].hasError('maxlength') && formRef.submitted">
+            <span class="error" *ngIf="stepOneForm.controls['firstName'].hasError('maxlength') && formRef.submitted">
               First name cannot exceed 30 characters
             </span>
-            <span class="error" *ngIf="stepOneForm.controls['FirstName'].hasError('pattern') && formRef.submitted">
+            <span class="error" *ngIf="stepOneForm.controls['firstName'].hasError('pattern') && formRef.submitted">
               First name can only contain letters and spaces
             </span>
           </div>
@@ -51,15 +51,15 @@
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="ro-pd-lname" class="form-label ps-1">Last Name</label>
-            <input type="text" class="form-control" id="ro-pd-lname" formControlName="LastName" placeholder="Enter Last Name" />
+            <input type="text" class="form-control" id="ro-pd-lname" formControlName="lastName" placeholder="Enter Last Name" />
           </div>
           <div class="col-md-6 mb-1">
             <label for="ro-pd-dob" class="form-label ps-1">Date of Birth<span class="asterisk">*</span></label>
-            <input type="date" class="form-control" id="ro-pd-dob" formControlName="DateOfBirth" />
-            <span class="error" *ngIf="stepOneForm.controls['DateOfBirth'].hasError('required') && formRef.submitted">
+            <input type="date" class="form-control" id="ro-pd-dob" formControlName="dateOfBirth" />
+            <span class="error" *ngIf="stepOneForm.controls['dateOfBirth'].hasError('required') && formRef.submitted">
               Please enter date of birth
             </span>
-            <span class="error" *ngIf="stepOneForm.controls['DateOfBirth'].hasError('invalidDateOfBirth') && formRef.submitted">
+            <span class="error" *ngIf="stepOneForm.controls['dateOfBirth'].hasError('invalidDateOfBirth') && formRef.submitted">
               Date of Birth cannot be in the future.
             </span>
           </div>
@@ -68,24 +68,24 @@
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="ro-pd-gender" class="form-label ps-1">Gender<span class="asterisk">*</span></label>
-            <select class="form-select" id="ro-pd-gender" formControlName="Gender" aria-label="Default select example">
+            <select class="form-select" id="ro-pd-gender" formControlName="gender" aria-label="Default select example">
               <option value="">Select Gender</option>
               <option value="Male">Male</option>
               <option value="Female">Female</option>
               <option value="Other">Other</option>
             </select>
-            <span class="error" *ngIf="stepOneForm.controls['Gender'].hasError('required') && formRef.submitted">
+            <span class="error" *ngIf="stepOneForm.controls['gender'].hasError('required') && formRef.submitted">
               Please select gender
             </span>
           </div>
 
           <div class="col-md-6 mb-1">
             <label for="ro-pd-phnNumber" class="form-label ps-1">Phone No.<span class="asterisk">*</span></label>
-            <input type="text" class="form-control" id="ro-pd-phnNumber" formControlName="PhoneNumber" placeholder="Enter Phone No." />
-            <span class="error" *ngIf="(stepOneForm.controls['PhoneNumber'].hasError('required')
-                                     || stepOneForm.controls['PhoneNumber'].hasError('pattern')
-                                     || stepOneForm.controls['PhoneNumber'].hasError('minlength')
-                                     || stepOneForm.controls['PhoneNumber'].hasError('maxlength')) && formRef.submitted">
+            <input type="text" class="form-control" id="ro-pd-phnNumber" formControlName="phoneNumber" placeholder="Enter Phone No." />
+            <span class="error" *ngIf="(stepOneForm.controls['phoneNumber'].hasError('required')
+                                     || stepOneForm.controls['phoneNumber'].hasError('pattern')
+                                     || stepOneForm.controls['phoneNumber'].hasError('minlength')
+                                     || stepOneForm.controls['phoneNumber'].hasError('maxlength')) && formRef.submitted">
               Phone number must be a 10-digit number
             </span>
           </div>
@@ -93,21 +93,21 @@
 
         <div class="row">
           <div class="col-md-6 mb-1">
-            <label for="ro-pd-secondryNumber" class="form-label ps-1">Secondary Phone Number</label>
-            <input type="text" class="form-control" id="ro-pd-secondryNumber" formControlName="SecondryNumber" placeholder="Enter Secondary Phone No." />
-            <span class="error" *ngIf="(stepOneForm.controls['SecondryNumber'].hasError('pattern')
-                                     || stepOneForm.controls['SecondryNumber'].hasError('minlength')
-                                     || stepOneForm.controls['SecondryNumber'].hasError('maxlength')) && formRef.submitted">
+            <label for="ro-pd-secondaryNumber" class="form-label ps-1">Secondary Phone Number</label>
+            <input type="text" class="form-control" id="ro-pd-secondaryNumber" formControlName="secondaryNumber" placeholder="Enter Secondary Phone No." />
+            <span class="error" *ngIf="(stepOneForm.controls['secondaryNumber'].hasError('pattern')
+                                     || stepOneForm.controls['secondaryNumber'].hasError('minlength')
+                                     || stepOneForm.controls['secondaryNumber'].hasError('maxlength')) && formRef.submitted">
               Phone number must be a 10-digit number
             </span>
           </div>
 
           <div class="col-md-6 mb-1">
             <label for="ro-pd-email" class="form-label ps-1">Email Address<span class="asterisk">*</span></label>
-            <input type="email" class="form-control" id="ro-pd-email" formControlName="Email" placeholder="Enter Email Address" />
-            <span class="error" *ngIf="(stepOneForm.controls['Email'].hasError('required') 
-                                      || stepOneForm.controls['Email'].hasError('email')
-                                      || stepOneForm.controls['Email'].hasError('restrictedDomain')) 
+            <input type="email" class="form-control" id="ro-pd-email" formControlName="email" placeholder="Enter Email Address" />
+            <span class="error" *ngIf="(stepOneForm.controls['email'].hasError('required') 
+                                     || stepOneForm.controls['email'].hasError('email')
+                                     || stepOneForm.controls['email'].hasError('restrictedDomain')) 
                                       && formRef.submitted">
               Please enter email, example : abc&#64;gmail.com
             </span>
@@ -117,33 +117,33 @@
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="ro-pd-streetAddress" class="form-label ps-1">Street Address<span class="asterisk">*</span></label>
-            <input type="text" class="form-control" id="ro-pd-streetAddress" formControlName="StreetAddress" placeholder="Enter Street Address" />
-            <span class="error" *ngIf="stepOneForm.controls['StreetAddress'].hasError('required') && formRef.submitted">Please enter street address</span>
+            <input type="text" class="form-control" id="ro-pd-streetAddress" formControlName="streetAddress" placeholder="Enter Street Address" />
+            <span class="error" *ngIf="stepOneForm.controls['streetAddress'].hasError('required') && formRef.submitted">Please enter street address</span>
           </div>
           <div class="col-md-6 mb-1">
             <label for="ro-pd-landmark" class="form-label ps-1">Landmark</label>
-            <input type="text" class="form-control" id="ro-pd-landmark" formControlName="Landmark" placeholder="Enter landmark " />
+            <input type="text" class="form-control" id="ro-pd-landmark" formControlName="landmark" placeholder="Enter landmark " />
           </div>
         </div>
 
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="ro-pd-country" class="form-label ps-1">Country<span class="asterisk">*</span></label>
-            <select class="form-select" id="ro-pd-country" formControlName="Country" (change)="loadStates($event)">
+            <select class="form-select" id="ro-pd-country" formControlName="country" (change)="loadStates($event)">
               <option value="">Select Country</option>
               <option *ngFor="let country of countries" [value]="country.countryCode">{{ country.countryName }}</option>
             </select>
-            <span class="error" *ngIf="stepOneForm.controls['Country'].hasError('required') && formRef.submitted">
+            <span class="error" *ngIf="stepOneForm.controls['country'].hasError('required') && formRef.submitted">
               Please select country
             </span>
           </div>
           <div class="col-md-6 mb-1">
             <label for="ro-pd-state" class="form-label ps-1">State<span class="asterisk">*</span></label>
-            <select class="form-select" id="ro-pd-state" formControlName="State" (change)="loadCities($event)">
+            <select class="form-select" id="ro-pd-state" formControlName="state" (change)="loadCities($event)">
               <option value="">Select state</option>
               <option *ngFor="let state of states" [value]="state.name">{{ state.name }}</option>
             </select>
-            <span class="error" *ngIf="stepOneForm.controls['State'].hasError('required') && formRef.submitted">
+            <span class="error" *ngIf="stepOneForm.controls['state'].hasError('required') && formRef.submitted">
               Please select state
             </span>
           </div>
@@ -152,21 +152,21 @@
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="ro-pd-city" class="form-label ps-1">City<span class="asterisk">*</span></label>
-            <select class="form-select" id="ro-pd-city" formControlName="City">
+            <select class="form-select" id="ro-pd-city" formControlName="city">
               <option value="">Select city</option>
               <option *ngFor="let city of cities" [value]="city.name">{{ city.name }}</option>
             </select>
-            <span class="error" *ngIf="stepOneForm.controls['City'].hasError('required') && formRef.submitted">
+            <span class="error" *ngIf="stepOneForm.controls['city'].hasError('required') && formRef.submitted">
               Please select state
             </span>
           </div>
           <div class="col-md-6 mb-1">
             <label for="ro-pd-postalCode" class="form-label ps-1">Postal Code/ZIP Code<span class="asterisk">*</span></label>
-            <input type="text" class="form-control" id="ro-pd-postalCode" formControlName="PostalCode" placeholder="Enter Postal Code/ZIP Code" />
-            <span class="error" *ngIf="(stepOneForm.controls['PostalCode'].hasError('required')
-                                    || stepOneForm.controls['PostalCode'].hasError('minlength') 
-                                    || stepOneForm.controls['PostalCode'].hasError('maxlength')
-                                    || stepOneForm.controls['PostalCode'].hasError('pattern')) && formRef.submitted">
+            <input type="text" class="form-control" id="ro-pd-postalCode" formControlName="postalCode" placeholder="Enter Postal Code/ZIP Code" />
+            <span class="error" *ngIf="(stepOneForm.controls['postalCode'].hasError('required')
+                                    ||  stepOneForm.controls['postalCode'].hasError('minlength') 
+                                    ||  stepOneForm.controls['postalCode'].hasError('maxlength')
+                                    ||  stepOneForm.controls['postalCode'].hasError('pattern')) && formRef.submitted">
               Postal code must be a 6-digit number
             </span>
 
@@ -176,18 +176,18 @@
         <div class="row">
           <div class="col-md-6 mb-1">
             <label for="ro-pd-password" class="form-label ps-1">Password<span class="asterisk">*</span></label>
-            <input type="password"  class="form-control" id="ro-pd-password" formControlName="Password" placeholder="Enter Password" />
-            <span class="error" *ngIf="(stepOneForm.controls['Password'].hasError('required') 
-                                    || stepOneForm.controls['Password'].hasError('minlength')
-                                    || stepOneForm.controls['Password'].hasError('maxlength')) && formRef.submitted">
+            <input type="password"  class="form-control" id="ro-pd-password" formControlName="password" placeholder="Enter Password" />
+            <span class="error" *ngIf="(stepOneForm.controls['password'].hasError('required') 
+                                    ||  stepOneForm.controls['password'].hasError('minlength')
+                                    ||  stepOneForm.controls['password'].hasError('maxlength')) && formRef.submitted">
               Please enter a password (at least 6 characters)
             </span>
           </div>
           <div class="col-md-6 mb-1">
             <label for="ro-pd-cnfmPassword" class="form-label ps-1">Confirm Password<span class="asterisk">*</span></label>
-            <input type="password" class="form-control" id="ro-pd-cnfmPassword" formControlName="ConfirmPassword" placeholder="Enter Confirm Password" />
-            <span class="error" *ngIf="(stepOneForm.controls['ConfirmPassword'].hasError('required') 
-                                     || stepOneForm.controls['ConfirmPassword'].hasError('isMatching')) && formRef.submitted">
+            <input type="password" class="form-control" id="ro-pd-cnfmPassword" formControlName="confirmPassword" placeholder="Enter Confirm Password" />
+            <span class="error" *ngIf="(stepOneForm.controls['confirmPassword'].hasError('required') 
+                                     || stepOneForm.controls['confirmPassword'].hasError('isMatching')) && formRef.submitted">
               Please confirm your password (Passwords must match)
             </span>
           </div>
